# wallace

./: Cargo.toml  todo
assets/shaders/: debug_aabb.wgsl  debug_surface.wgsl
src/: lib.rs
src/aabb/: aabb_2d.rs  aabb_3d.rs  debug_aabb_material.rs  debug_surface_material.rs  mod.rs  optimise_world.rs  rectangle.rs
src/camera_plugin/: cam_switcher.rs  fps.rs  mod.rs  pan_orbit.rs
src/tools/: mesh_builder.rs
tests/: aabb_2d.rs  aabb_3d.rs  rectangle.rs
