[package]
name = "wallace"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
azalea = { path = "azalea/azalea" }
azalea-physics = { path = "azalea/azalea-physics" }
anyhow = "1.0.75"
tokio = "1.34.0"
uuid = "1.6.1"
bevy = "0.12.0"
parking_lot = "0.12.1"
bevy_rapier3d = "0.23.0"

[lib]

[[bin]]
name = "basic"

[[bin]]
name = "ecs"

[[bin]]
name = "aabb"
